tests/baselines/reference/anonymousModules.errors.txt
==== tests/cases/compiler/anonymousModules.ts (7 errors) ====
    module {
           ~
!!! anonymousModules.ts(1,8): error TS1005: ';' expected.
    ~~~~~~
!!! anonymousModules.ts(1,1): error TS2095: Could not find symbol 'module'.
        export var foo = 1;
    
        module {
            ~
!!! anonymousModules.ts(4,9): error TS1005: ';' expected.
     ~~~~~~
!!! anonymousModules.ts(4,2): error TS2095: Could not find symbol 'module'.
            export var bar = 1;
        }
    
        var bar = 2;
         ~~~~~~~
!!! anonymousModules.ts(8,6): error TS2192: All declarations of merged declaration 'bar' must be exported or not exported.
    
        module {
            ~
!!! anonymousModules.ts(10,9): error TS1005: ';' expected.
     ~~~~~~
!!! anonymousModules.ts(10,2): error TS2095: Could not find symbol 'module'.
            var x = bar;
        }
    }